src/App.css
body {
  margin: 0;
  background-image: url('/Background.jpg');
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.picture {
  display: flex;
  /* object-fit: contain; */
  width: 200px;
  height: 200px;
  border: 2px solid lightgrey;
  border-radius: 20px;
  object-fit: cover;
}

.card {
  border: 5px solid lightgrey;
  border-radius: 20px;
  width: 30vw;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
  padding: 10px;
  margin: 10px;
  background-color: #409ddc;
  color: white;
}

.card > h2,
.card > p {
  text-align: center;
}

.card > p {
  height: 100px;
}

.stats {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 5px;
  justify-content: space-evenly;
}

.stats > div,
.stats > img {
  padding: 5px;
  height: 250px;
}

.stats > div {
  width: 200px;
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}
.list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

h1 {
  color: white;
  /* text-transform: uppercase; */
  text-align: center;
  padding: 20px;
  font-size: xxx-large;
}

.flex-row {
  display: flex;
}

.sidebar {
  border: 5px solid lightgrey;
  background-color: white;
  margin: 20px;
  border-radius: 20px;
  padding: 10px;
  background-color: #409ddc;
  color: white;
}
.sidebar > h2 {
  text-align: center;
}

form {
  display: flex;
  flex-direction: column;
  height: 250px;
  justify-content: space-evenly;
}

.sentiments {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding: 15px;
}

.sentiments > h3 {
  width: 80px;
}

.heart {
  width: 20px;
}

.heading {
  display: grid;
  height: 200px;
  grid-template-columns: 1fr 4fr;
  background-color: #409ddc;
}

.logo {
  height: 200px;
}

.dislikes span,
.likes span {
  position: relative;
  top: -5px;
  margin-left: 5px;
}

